refactor: remove refinedstorage2-platform-test module
It's not necessary as we will mostly rely on gametests in the platform layer.

For the other tests, just move the SetupMinecraft callback
to platform-common.